change in background

--- a/views/expense.ejs
+++ b/views/expense.ejs
@@ -77,10 +77,10 @@
       <!--logo start-->
       <div class="mainlogo"><a href="/home" class="mainlogo"><img src="/images/mainlogo.png"> </a></div>
     </div>
-      <!--logo end-->
+      <!--logo end
 
       <div class="nav search-row" id="top_menu">
-        <!--  search form start -->
+        <!--  search form start 
         <ul class="nav top-menu">
           <li>
             <form class="navbar-form">
@@ -88,14 +88,14 @@
             </form>
           </li>
         </ul>
-        <!--  search form end -->
-      </div>
+        <!--  search form end 
+      </div>-->
 
       <div class="top-nav notification-row">
         <!-- notificatoin dropdown start-->
         <ul class="nav pull-right top-menu">
 
-          <!-- task notificatoin start -->
+          <!-- task notificatoin start 
           <li id="task_notificatoin_bar" class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <i class="icon-task-l"></i>
@@ -179,8 +179,8 @@
               </li>
             </ul>
           </li>
-          <!-- task notificatoin end -->
-          <!-- inbox notificatoin start-->
+          <!-- task notificatoin end 
+          <!-- inbox notificatoin start
           <li id="mail_notificatoin_bar" class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <i class="icon-envelope-l"></i>
@@ -244,7 +244,7 @@
               </li>
             </ul>
           </li>
-          <!-- inbox notificatoin end -->
+           inbox notificatoin end -->
           <!-- alert notification start-->
           <li id="alert_notificatoin_bar" class="dropdown">
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
@@ -260,28 +260,28 @@
               <li>
                 <a href="#">
                                     <span class="label label-primary"><i class="icon_profile"></i></span>
-                                    Friend Request
+                                    income placed.
                                     <span class="small italic pull-right">5 mins</span>
                                 </a>
               </li>
               <li>
                 <a href="#">
                                     <span class="label label-warning"><i class="icon_pin"></i></span>
-                                    John location.
+                                    Goal not met.
                                     <span class="small italic pull-right">50 mins</span>
                                 </a>
               </li>
               <li>
                 <a href="#">
                                     <span class="label label-danger"><i class="icon_book_alt"></i></span>
-                                    Project 3 Completed.
+                                    Goal Completed
                                     <span class="small italic pull-right">1 hr</span>
                                 </a>
               </li>
               <li>
                 <a href="#">
                                     <span class="label label-success"><i class="icon_like"></i></span>
-                                    Mick appreciated your work.
+                                    
                                     <span class="small italic pull-right"> Today</span>
                                 </a>
               </li>
