--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -595,7 +595,7 @@ table tr th { color: #688a7e;}
 
 #sidebar {
 
-    width: 180px;
+    width: 250px;
 
     height: 100%;
 
@@ -1130,6 +1130,7 @@ ul.sidebar-menu li.active a i {
     padding: 15px;
 
     width: 100%;
+    margin-left:70px;
 
 }
 
