--- a/public/stylesheets/mygoals.css
+++ b/public/stylesheets/mygoals.css
@@ -15,7 +15,34 @@ h1 {
   color: #6E6E6E;
   margin: 80px 0;
 }
-
+.closemain {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  columns: #ffffff;;
+}
+ .closemain:hover {
+  color: grey;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+ visibility: hidden;
+  opacity: 0;
+}
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
 .box {
   width: 100%;
   margin: 0 auto;
@@ -25,6 +52,7 @@ h1 {
   /*border-radius: 20px/50px;*/
  /* background-clip: padding-box;*/
   text-align: center;
+ 
 }
 .goallink{
   color: rgb(116, 154, 212);
@@ -56,6 +84,7 @@ text-decoration:none;
   transition: opacity 500ms;
   visibility: hidden;
   opacity: 0;
+  width:100%;
 }
 .overlay:target {
   visibility: visible;
@@ -67,11 +96,30 @@ text-decoration:none;
   padding: 20px;
   background: #fff;
   border-radius: 5px;
-  width: 30%;
+  width: 50%;
   position: relative;
   transition: all 5s ease-in-out;
+  margin-top:100px;
 }
+.mainblock{
+  width: 100%;
+background: #fff;
+overflow: hidden;
+margin :auto;
+display: -webkit-box;
+display: -webkit-flex;
+display: -moz-box;
+display: -ms-flexbox;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+align-items: center;
+align-self: center;
+border-color: black;
+border-width: 2px;
+color:grey;
 
+}
 .popup h2 {
   margin-top: 0;
   color: #333;
@@ -117,6 +165,7 @@ body {
   border: 0;
   border-radius: 1rem;
   box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+  
 }
 
 .card-signin .card-title {
@@ -125,9 +174,7 @@ body {
   font-size: 1.5rem;
 }
 
-.card-signin .card-body {
-  padding: 2rem;
-}
+
 
 .form-signin {
   width: 100%;
