sendgrid email nasla andsecond demo done

--- a/views/404wrong.ejs
+++ b/views/404wrong.ejs
@@ -12,16 +12,16 @@
   <title>404 | Creative - Bootstrap 3 Responsive Admin Template</title>
 
   <!-- Bootstrap CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
   <!-- bootstrap theme -->
-  <link href="css/bootstrap-theme.css" rel="stylesheet">
+  <link href="/stylesheets/bootstrap-theme.css" rel="stylesheet">
   <!--external css-->
   <!-- font icon -->
-  <link href="css/elegant-icons-style.css" rel="stylesheet" />
-  <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
+  <link href="/stylesheets/elegant-icons-style.css" rel="stylesheet" />
+  <link href="/stylesheets/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
   <!-- Custom styles -->
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet" />
+  <link href="/stylesheets/style.css" rel="stylesheet">
+  <link href="/stylesheets/style-responsive.css" rel="stylesheet" />
 
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
   <!--[if lt IE 9]>
@@ -42,7 +42,7 @@
     <p class="text-404">404</p>
 
     <h2>Aww Snap!</h2>
-    <p>Email and password don't match bro! <br><a href="/">Try Again </a></p>
+    <p>Email and password don't match bro! <br><a href="/login">Try Again </a></p>
   </div>
   <div class="credits">
           <!--
@@ -51,7 +51,6 @@
             Licensing information: https://bootstrapmade.com/license/
             Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
           -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
 
 
