--- a/views/saving.ejs
+++ b/views/saving.ejs
@@ -32,7 +32,7 @@
                     <a class="button" href="#popup1">ok</a>
                 </div>
                 <div class="box">
-                    <a href = "/notify" ><a class="button"  href = "#popup2">Mail me the details</a></a>
+                    <a href = "/notify" class="button" >Mail me the details</a>
                 </div>
                 <% if(sav>=gaddall){ %>
 
