--- a/views/income.ejs
+++ b/views/income.ejs
@@ -294,6 +294,51 @@
               </li>
             </ul>
           </li>
+          <!-- alert notification start-->
+          <li id="alert_notificatoin_bar" class="dropdown">
+            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+
+                            <i class="icon-bell-l"></i>
+                            <span class="badge bg-important">7</span>
+                        </a>
+            <ul class="dropdown-menu extended notification">
+              <div class="notify-arrow notify-arrow-blue"></div>
+              <li>
+                <p class="blue">You have 4 new notifications</p>
+              </li>
+              <li>
+                <a href="#">
+                                    <span class="label label-primary"><i class="icon_profile"></i></span>
+                                    income placed.
+                                    <span class="small italic pull-right">5 mins</span>
+                                </a>
+              </li>
+              <li>
+                <a href="#">
+                                    <span class="label label-warning"><i class="icon_pin"></i></span>
+                                    Goal not met.
+                                    <span class="small italic pull-right">50 mins</span>
+                                </a>
+              </li>
+              <li>
+                <a href="#">
+                                    <span class="label label-danger"><i class="icon_book_alt"></i></span>
+                                    Goal Completed
+                                    <span class="small italic pull-right">1 hr</span>
+                                </a>
+              </li>
+              <li>
+                <a href="#">
+                                    <span class="label label-success"><i class="icon_like"></i></span>
+                                    
+                                    <span class="small italic pull-right"> Today</span>
+                                </a>
+              </li>
+              <li>
+                <a href="#">See all notifications</a>
+              </li>
+            </ul>
+          </li>
           <!-- alert notification end-->
           <!-- user login dropdown start-->
           <li class="dropdown">
@@ -335,7 +380,9 @@
       </div>
     </header>
     <!--header end-->
-<br><br><br>
+<br>
+<br>
+<br>
     <!--sidebar start-->
     <aside>
       <div id="sidebar" class="nav-collapse ">
