--- a/views/index.ejs
+++ b/views/index.ejs
@@ -97,28 +97,28 @@
               <li>
                 <a href="#">
                                     <span class="label label-primary"><i class="icon_profile"></i></span>
-                                    Goal not met
+                                    income placed.
                                     <span class="small italic pull-right">5 mins</span>
                                 </a>
               </li>
               <li>
                 <a href="#">
                                     <span class="label label-warning"><i class="icon_pin"></i></span>
-                                    Set you goal
+                                    Goal not met.
                                     <span class="small italic pull-right">50 mins</span>
                                 </a>
               </li>
               <li>
                 <a href="#">
                                     <span class="label label-danger"><i class="icon_book_alt"></i></span>
-                                    goal accomplished
+                                    Goal Completed
                                     <span class="small italic pull-right">1 hr</span>
                                 </a>
               </li>
               <li>
                 <a href="#">
                                     <span class="label label-success"><i class="icon_like"></i></span>
-                                    Mick appreciated your work.
+                                    
                                     <span class="small italic pull-right"> Today</span>
                                 </a>
               </li>
@@ -134,7 +134,7 @@
                             <span class="profile-ava">
                                 
                             </span>
-                            <span class="username"><%= LoginInfo.username %></span>
+                            <span class="username">smilerac</span>
                             <b class="caret"></b>
                         </a>
             <ul class="dropdown-menu extended logout">
@@ -168,9 +168,9 @@
       </div>
     </header>
     <!--header end-->
-
-    <!--sidebar start--><br><br>
-    <br>
+<br>
+<br>
+<br>
     <aside>
       <div id="sidebar" class="nav-collapse ">
         <!-- sidebar menu start-->
