income v/s expenses area, line and bar charts visualization done including change in color combination of card background

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -276,7 +276,7 @@
             <div class="col-md-6">
               <!-- AREA CHART -->
               <div class="card card-primary">
-                <div class="card-header">
+                <div class="card-header" style="background-color:rgb(197, 141, 36)" background = ">
                   <h3 class="card-title">Income v/s Expenses Area Chart</h3>
   
                   <div class="card-tools">
@@ -296,7 +296,7 @@
   
               <!-- DONUT CHART -->
               <div class="card card-danger">
-                <div class="card-header">
+                <div class="card-header" style="background-color:rgb(23, 162, 184)" background = ">
                   <h3 class="card-title">Expenses Donut Chart</h3>
   
                   <div class="card-tools">
@@ -314,7 +314,7 @@
   
               <!-- PIE CHART -->
               <div class="card card-danger">
-                <div class="card-header">
+                <div class="card-header" style="background-color:rgb(197, 141, 36)" background = ">
                   <h3 class="card-title">Pie Chart</h3>
   
                   <div class="card-tools">
@@ -335,7 +335,7 @@
             <div class="col-md-6">
               <!-- LINE CHART -->
               <div class="card card-info">
-                <div class="card-header">
+                <div class="card-header" background = ">
                   <h3 class="card-title">Expenses v/s Savings Line Chart</h3>
   
                   <div class="card-tools">
@@ -355,7 +355,7 @@
   
               <!-- BAR CHART -->
               <div class="card card-success">
-                <div class="card-header">
+                <div class="card-header" style="background-color:rgb(197, 141, 36)" background = ">
                   <h3 class="card-title">Expenses v/s Savings Bar Chart</h3>
   
                   <div class="card-tools">
@@ -375,7 +375,7 @@
   
               <!-- STACKED BAR CHART -->
               <div class="card card-success">
-                <div class="card-header">
+                <div class="card-header" style="background-color:rgb(23, 162, 184)" background = ">
                   <h3 class="card-title">Expenses v/s Savings Stacked Bar Chart</h3>
   
                   <div class="card-tools">
