--- a/views/index.ejs
+++ b/views/index.ejs
@@ -251,7 +251,7 @@
       </div>
     </aside>
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
+    <div class="content-wrapper" style="background-color: rgba(17, 73, 156, 0.788)">
       <!-- Content Header (Page header) -->
       <section class="content-header">
         <div class="container-fluid">
@@ -489,12 +489,12 @@
         scales: {
           xAxes: [{
             gridLines : {
-              display : true,
+              display : false,
             }
           }],
           yAxes: [{
             gridLines : {
-              display : true,
+              display : false,
             }
           }]
         }
