index view background change

--- a/views/expense.ejs
+++ b/views/expense.ejs
@@ -438,18 +438,21 @@
               <input type="text" placeholder="Pocket Name" name="name" required>
               <label for="amount"><b>Amount</b></label>
               <input type="text" placeholder="Rs." name="amount" required>
+              <label for="amount"><b>Category</b></label>
               <select name='category'>
-                  <option>Immediate Obligations</option>
-                  <option>True Expenses</option>
-                  <option>Transportation</option>
-                  <option>Debt Repayment</option>
-                  <option>Pleasures</option>
-                  <option>Other</option>
+                  <option value="Immediate Obligations">Immediate Obligations</option>
+                  <option value="True Expenses">True Expenses</option>
+                  <option value="Transportation">Transportation</option>
+                  <option value="Lend / Repay">Lend / Repay</option>
+                  <option value="Pleasures">Pleasures</option>
+                  <option value="Other">Other</option>
                   <!-- <option>Epic</option>
                   <option>Comedy-drama</option>
                   <option>Non-Fiction</option> -->
               </select>
               <br>
+              <br>
+
              
               <!-- <input type="radio" name="category" value="obligations"> Immediate Obligations<br>
               <input type="radio" name="category" value="expenses"> True Expenses<br>
