--- a/views/index.ejs
+++ b/views/index.ejs
@@ -425,14 +425,41 @@
   <!-- page script -->
   <script>
     // var income,expense=new Array();
-    var abc = []
-       var income='<%= income_amount %>' ;
-     incomearray = income.split(',')   
-     var expense = '<%= expense_amount %>';
-     expensearray = expense.split(',')   
+    
+    //for Area, line, bar charts
+    // var incomearray = []
+    var income ='<%= income_amount %>' ;
+    incomearray = income.split(',')   
+    var expense = '<%= expense_amount %>';
+    expensearray = expense.split(',')   
+
+    //for Donut and Pie charts
+    var IOexpense = parseInt('<%= IOexpense %>') ;
+    var TEexpense = parseInt('<%= TEexpense %>');
+    var Texpense = parseInt('<%= Texpense %>');
+    var LRexpense = parseInt('<%= LRexpense %>');
+    var Pexpense = parseInt('<%= Pexpense %>');
+    var Oexpense = parseInt('<%= Oexpense %>');
+
+    // console.log('expense IO',typeof IOexpense)
+    console.log('expense IO',Texpense)
+    // IOarray = IOexpense.split(',')  
+    // var TEexpense = '<%= expense_amount %>';
+    // TEarray = TEexpense.split(',') 
+    // var Texpense = '<%= expense_amount %>';
+    // Tarray = Texpense.split(',')   
+    // var LRexpense = '<%= expense_amount %>';
+    // LRarray = LRexpense.split(',') 
+    // var Pexpense = '<%= expense_amount %>';
+    // Parray = Pexpense.split(',')
+    // var Oexpense = '<%= expense_amount %>';
+    // Oarray = Oexpense.split(',')
+    
 
 
-    console.log('type of',abc) 
+
+
+    // console.log('type of',abc) 
     $(function () {
       /* ChartJS
        * -------
@@ -528,6 +555,8 @@
         options: lineChartOptions
       })
   
+
+      // IOexpense,TEexpense,Texpense,LRexpense,Pexpense,Oexpense
       //-------------
       //- DONUT CHART -
       //-------------
@@ -535,12 +564,12 @@
       var donutChartCanvas = $('#donutChart').get(0).getContext('2d')
       var donutData        = {
         labels: [
-            'Fun', 
-            'Groceries',
-            'Rent', 
-            'College fees', 
-            'clothes', 
-            'Eat out', 
+            'Immediate Obligations', 
+            'True Expenses',
+            'Transportation', 
+            'Lend / Repay', 
+            'Pleasures', 
+            'Other', 
         ],
         datasets: [
           {
