--- a/views/goals.ejs
+++ b/views/goals.ejs
@@ -415,8 +415,10 @@
 
     <!--main content start-->
     <section id="main-content">
+       
       <section class="wrapper">
         <!--overview start-->
+        <div class="im">
         <div class="row">
           <div class="col-lg-12">
             <!-- <ol class="breadcrumb">
@@ -426,6 +428,7 @@
           </div>
         </div>
 <section class = "goalbody">
+  
 <h1>Your Goals for the week</h1>
 
 
@@ -482,6 +485,7 @@
     </div>
   </div>
 </body>
+</div>
 </div>
 </div>
 </section>
