--- a/views/index.ejs
+++ b/views/index.ejs
@@ -251,7 +251,7 @@
       </div>
     </aside>
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper" style="background-color: rgba(17, 73, 156, 0.788)">
+    <div class="content-wrapper" style="background-color: #4dbfbf">
       <!-- Content Header (Page header) -->
       <section class="content-header">
         <div class="container-fluid">
