--- a/views/saving.ejs
+++ b/views/saving.ejs
@@ -1,7 +1,7 @@
 <html>
     <head><title>saving</title></head>
     <link href="/stylesheets/saving.css" rel="stylesheet">
-    <body class="color">
+    <body class="color" background="/images/goal.png">
             <br>
             <br>
             <br>
