--- a/views/index.ejs
+++ b/views/index.ejs
@@ -573,6 +573,7 @@
         ],
         datasets: [
           {
+            // data: [IOexpense,TEexpense,Texpense,LRexpense,Pexpense,Oexpense],
             data: [7000,5000,4000,6000,3000,500],
             backgroundColor : ['#f56954', '#00a65a', '#f39c12', '#00c0ef', '#3c8dbc', '#d2d6de'],
           }
