--- a/views/income.ejs
+++ b/views/income.ejs
@@ -423,6 +423,12 @@
                             <span>My Goals</span>
                         </a>
             </li>
+            <li>
+                <a class="" href="/todo">
+                              <i class="icon_genius"></i>
+                              <span>TODO List</span>
+                          </a>
+              </li>
      <!--   <li>
             <a class="" href="chart-chartjs.html">
                           <i class="icon_piechart"></i>
