--- a/views/index.ejs
+++ b/views/index.ejs
@@ -209,8 +209,8 @@
                       </a>
               <ul class="sub">
                   <li><a class="" href="/mygoals">Saving Goals</a></li>
-                  <li><a class="" href="buttons.html">mm</a></li>
-                  <li><a class="" href="grids.html">Grids</a></li>
+                  <!-- <li><a class="" href="buttons.html">mm</a></li> -->
+                  <!-- <li><a class="" href="grids.html">Grids</a></li> -->
                 </ul>
           </li>
           <li>
@@ -661,11 +661,11 @@
       var donutChartCanvas = $('#donutChart').get(0).getContext('2d')
       var donutData        = {
         labels: [
-            'Immediate Obligations', 
+            'Fun / Pleasures', 
             'True Expenses',
             'Transportation', 
             'Lend / Repay', 
-            'Pleasures', 
+            'Immediate Obligations', 
             'Other', 
         ],
         datasets: [
